force-app/main/default/objects/AAR_Presentation__c/AAR_Presentation__c.object-meta.xml
<CustomObject>
    <label>Invited Presentation</label>
    <nameField>
        <displayFormat>PRZ-{0000}</displayFormat>
        <label>Presentation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invited Presentations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>