force-app/main/default/objects/AAR_Presentation__c/fields/AAR_Record__c.field-meta.xml
<CustomField>
    <fullName>AAR_Record__c</fullName>
    <label>AAR Record</label>
    <referenceTo>UHN_AAR__c</referenceTo>
    <relationshipLabel>Invited Presentations</relationshipLabel>
    <relationshipName>Invited_Presentations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>