force-app/main/default/objects/AAR_Presentation__c/fields/Organizing_Body__c.field-meta.xml
<CustomField>
    <fullName>Organizing_Body__c</fullName>
    <label>Organizing Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>