force-app/main/default/objects/AAR_Presentation__c/fields/Presentation_Title__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Title__c</fullName>
    <label>Presentation Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>