force-app/main/default/objects/AAR_Presentation__c/fields/Presentation_Type__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Type__c</fullName>
    <label>Presentation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Keynote</fullName><default>false</default><label
        >Keynote</label></value>
            <value><fullName>Plenary</fullName><default>false</default><label
        >Plenary</label></value>
            <value><fullName>Named Lecture</fullName><default
        >false</default><label>Named Lecture</label></value>
            <value><fullName>Invited Talk</fullName><default
        >false</default><label>Invited Talk</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>